<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GoogleDriveDemo</string>
    <string name="open" tools:keep="@string/open">Open</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="query">Query</string>
    <string name="signout">Logout</string>
    <string name="hintName">Filename</string>
    <string name="hintContent">Content</string>
    <string name="holder">holder</string>
</resources>
