<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:hint="@string/hintName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <EditText
        android:id="@+id/etContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/btn_layout"
        android:layout_below="@id/etTitle"
        android:layout_marginTop="8dp"
        android:gravity="top"
        android:hint="@string/hintContent"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitle"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bnOpen"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/open"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bnCreate"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/create"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bnSave"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/save"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bnQuery"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/query"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bnLogout"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/signout"
            android:textSize="12sp" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContent" />

</androidx.constraintlayout.widget.ConstraintLayout>






<!--<RelativeLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:padding="8dp"-->
<!--    tools:context=".MainActivity">-->

<!--    <EditText-->
<!--        android:id="@+id/file_title_edittext"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_alignParentTop="true" />-->

<!--    <EditText-->
<!--        android:id="@+id/doc_content_edittext"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_below="@id/file_title_edittext"-->
<!--        android:layout_above="@id/btn_layout" />-->

<!--    <LinearLayout-->
<!--        android:id="@+id/btn_layout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="48dp"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_alignParentBottom="true">-->

<!--        <Button-->
<!--            android:id="@+id/open_btn"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Open"-->
<!--            style="?attr/buttonBarButtonStyle" />-->

<!--        <Button-->
<!--            android:id="@+id/create_btn"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Create"-->
<!--            style="?attr/buttonBarButtonStyle" />-->

<!--        <Button-->
<!--            android:id="@+id/save_btn"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Save"-->
<!--            style="?attr/buttonBarButtonStyle" />-->

<!--        <Button-->
<!--            android:id="@+id/query_btn"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Query"-->
<!--            style="?attr/buttonBarButtonStyle" />-->

<!--    </LinearLayout>-->

<!--</RelativeLayout>-->